kfdefs/overlays/prod/dh-prod-trino/hive-metastore-statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: hive-metastore
spec:
  template:
    spec:
      containers:
        - name: metastore
          resources:
            limits:
              cpu: '4'
              memory: '8Gi'
            requests:
              cpu: '1'
              memory: '2Gi'
