kfdefs/overlays/prod/dh-prod-trino/trino-coordinator-dc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trino-coordinator
  labels:
    instance: trino
    role: trino-coordinator
spec:
  selector:
    matchLabels:
      instance: trino
      role: trino-coordinator
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        instance: trino
        role: trino-coordinator
    spec:
      replicas: 4
