kfdefs/overlays/prod/dh-prod-trino/trino-worker-dc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trino-worker
  labels:
    instance: trino
    role: trino-worker
spec:
  replicas: 4
