kfdefs/overlays/prod/dh-prod-trino/trino-route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: trino-datahub
    labels:
        component.opendatahub.io/name: trino
        instance: trino
        role: trino-coordinator
spec:
    host: trino.datahub.redhat.com
    to:
        kind: Service
        name: trino-service
    port:
        targetPort: trino-endpoint
    tls:
        termination: ENC[AES256_GCM,data:v9x0Hg==,iv:Rf+nE5PFiznyXFRH/YhkrWYArJzduqj+GDppoRLhwpY=,tag:TH4IsTjlRr5DmA4wpvC7eg==,type:str]
        certificate: ENC[AES256_GCM,data:LoXtZQZ2QCpqOaOU+tpXB6TVjGGhdWe2NiPhiGfJOD0IpMfLTLoQTqwVCD1aKRGwZnq6TP5gJKj6lfLshxy3+0sdCslr9qEMVoHx3AV+RTwwbwyaof9eIg5K2bNhNaB4wqBgm8rbdFjKs1p8lWKX7fdmnjm0DKQeXaj33dme/ZUnO0H0ix1LwiwqzBHB3ZsPYEB2lwma4n9diMYa9JekBfEB72qzlI91QDI1ZYhEoVQus33Jv6hepgi4VXKAgQtuIPbRmCCYor66IE0/Cjq/6r7r8UqqCB5vSjett3mXInULxBpJ1GRveujodcZ/0kG8MnwGg40boBWfNuvVUP25IIfFTAC165R+JwtWuvf2fbGrK5ZgoOm32SwTpJOQ1c7CCSaePWJQFw0gnPRiK3+7Jv996St7nWSKtl9i0k7K+xcWSt1YldEV4ZYjcYAkdx0r0YJR1gZHiSY [...]
        key: ENC[AES256_GCM,data:4KHCAftfSRplPmhjfw78xG07p3E/+sKanH0n2if4+9g5z7O0e8xtbKjySCNFI9gIttVlpoWBk+lYnfKlR/6PFeRAq/b1XdMdR4sNfeJD5kWFBObDseEYtwAbdmyqw1opuwvXMRH/bBPkctN2OgDJuCLdBVm2QKIVe4Jq68a2iVpzc2v9cCumdnsxVhT8zGSpJOzxLH/QgPeQcl38AYhwlAfi6ccOOG2RwyoDyfUn8zIIQISitKxAn8eDXZy/Yp7J57bd/Lh9sVEEniYA3k3dar8Uf7HYiyWEsn0LvQ5CglZZmsJz+bHJGcLeXvFtpZERURLaJfsJEeSoKbcKDphoWhu2ENdcdtyNjJC0rdO1BcEkLGk2KUQWAtxqaOHV+CRRrOLfjkgCKciOJAr6WNUJ/ngsuGL8PkCUsuET2xZjTO+jFH6Gn+e1wj76xMmSBAEuNJe1BslcaiUVuAvAopP [...]
        caCertificate: ENC[AES256_GCM,data:kdqRf7pPPVcQLF5qwypriLF2j2Zyyxm8KEE0zEoXvXtM7uV6AB8ktks+CzQkFTgYN0gUjvicazWM+fdDhO2cxMKvKGQOR2DC4BBjUezDnKTjyndJ4Q5DJ6y4NoG9p+JYyDn6TJmgciX8xB5Lydoryw1pE8Yx1eAfl3qDaBRx2ZEWKM3SaNfkEkAc/3+h68ML1m7fPVHx/Ar1KRJx3Sw5wOoR6kyMWHnL2Aim6t77b59p7e2oKzgAnNoCr9K0HK2qLz5G5gqNcFYWRU1hwxi1ITa0fUmfpaodrxiKf3+CapvakN1kMVX5VRJYxOvOY2J5pqjgN0BK9i+lF5RrjjSvdmfCCybApbBFyBZ2k9hJ20VrxciGPHiB+RdHqKwYTInYMJt3QPphFUnmqsXuyDIApnuaTJ2bcN0hy+GeZF8L0l6O2oQ72dRB2/m4Yt8BiqZeEDwf/u1H7 [...]
        insecureEdgeTerminationPolicy: ENC[AES256_GCM,data:X35F6NWQ++E=,iv:jumDOrFn5freT5hBwPlj6trKx26A6M+LF5NHV+3wdFA=,tag:iYCQ3MZ9bfDaQomqZsQ3qA==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    lastmodified: '2021-11-09T15:05:14Z'
    mac: ENC[AES256_GCM,data:U2ly+X0dTomrxg7U2jOVtL5AAML0COeQD+GdjEHjTZlN4uOi51N3SZrP626r1K2DB809hDF9OwurBxYqAFZAJrPMpSWPP+8nTOQBD3uVFUkJZbTL5pc/T39jQbkJx7bzpxtsqPTyNY32OKOA2p/lXc5aWu3WNchzmdR6WcMSWx0=,iv:ZHvL+NOh0XPNbmLNa1hsuJeIfb8tqydptI9hVowld1I=,tag:cf+/iuswV2TMp2xKVKlBvA==,type:str]
    pgp:
    -   created_at: '2021-11-09T15:05:13Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQgAhS1H+VT9RNcQYJWs/ijc1VyexUXJ2ornQP1ASJ/z7ImP
[...]
            9BIJ8UEkPbAtLwsyW35iefj0Uk5qyoW0ZEg02dQ=
            =9AQh
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.5.0
